--- a/source/index.html
+++ b/source/index.html
@@ -3,15 +3,130 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Название проекта</title>
+  <title>Главная - Cat Energy</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="styles/styles.css">
   <script src="scripts/index.js" defer></script>
 </head>
 
 <body class="page__body">
-  <header class="header">Шапка</header>
-  <main class="main">Основное содержание</main>
+  <header class="main-header">
+    <div class="container">
+      <a class="main-header__logo" href="index.html">
+        <img class="logo-image" src="#" alt="Логотип Cat Energy" width="33" height="38">
+        <img class="logo-text" src="#" alt="Cat Energy" width="101" height="18">
+      </a>
+      <nav class="main-navigation">
+        <button class="main-navigation__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
+        <ul class="navigation-list">
+          <li class="navigation-list__item">
+            <a class="navigation-list__link" href="index.html">Главная</a>
+          </li>
+          <li class="navigation-list__item">
+            <a class="navigation-list__link" href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="navigation-list__item">
+            <a class="navigation-list__link" href="#">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main class="main-container">
+    <section class="hero">
+      <div class="hero__container container">
+        <h1 class="hero__title">Функциональное питание для котов</h1>
+        <p class="hero__subtitle">Занялся собой? Займись котом!</p>
+        <a class="hero__button button" href="#">Подобрать программу</a>
+        <img class="hero__image" src="#" alt="Cat Energy Pro с курицей" width="709" height="609">
+      </div>
+    </section>
+    <section class="programs">
+      <div class="programs__container container">
+        <h2 class="visually-hidden">Программы питания</h2>
+        <article class="programs__item program-card">
+          <h3 class="program-card__title">Похудение</h3>
+          <p class="program-card__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <a class="program-card__link" href="#">Каталог slim</a>
+        </article>
+        <article class="programs__item program-card">
+          <h3 class="program-card__title">Набор массы</h3>
+          <p class="program-card__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+          <a class="program-card__link" href="#">Каталог pro</a>
+        </article>
+      </div>
+    </section>
+    <section class="benefits">
+      <div class="benefits__container container">
+        <h2 class="benefits__title title">Как это работает</h2>
+        <ul class="benefits__list">
+          <li class="benefits__item benefits__item--icon-leaf">Функциональное питание содержит только полезные питательные вещества.</li>
+          <li class="benefits__item benefits__item--icon-substance">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
+          <li class="benefits__item benefits__item--icon-cutlery">Замените один-два приема обычной еды на наше функциональное питание.</li>
+          <li class="benefits__item benefits__item--icon-scales">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+        </ul>
+      </div>
+    </section>
+    <section class="reviews">
+      <div class="reviews__container container">
+        <h2 class="reviews__title title">Живой пример</h2>
+        <p class="reviews__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+        <div class="reviews__statistics statistics">
+          <dl class="statistics__list">
+            <div class="statistics__item">
+              <dt class="statistics__item-value">5 кг</dt>
+              <dd class="statistics__item-description">Cнижение веса</dd>
+            </div>
+            <div class="statistics__item">
+              <dt class="statistics__item-value">60 дней</dt>
+              <dd class="statistics__item-description">Затрачено времени</dd>
+            </div>
+          </dl>
+          <div class="statistics__cost">
+            <p class="statistics__cost-text">Затраты на питание:</p>
+            <p class="statistics__cost-text">15 000 руб.</p>
+          </div>
+        </div>
+        <div class="reviews__slider slider">
+          <img class="slider__image-left" src="#" alt="Кот с ожирением" width="560" height="512">
+          <img class="slider__image-right" src="#" alt="Кот в здоровом весе" width="560" height="512">
+          <button class="slider__button" type="button"><span class="visually-hidden">Переместить</span></button>
+        </div>
+      </div>
+    </section>
+    <section class="contacts">
+      <h2 class="visually-hidden">Контакты</h2>
+      <div class="contacts__info contact-info">
+        <p class="contact-info__promo">Приглашаем к сотрудничеству дилеров!</p>
+        <p class="contact-info__text">ул. Большая Конюшенная, д. 19/8<span>Санкт-Петербург</span></p>
+      </div>
+      <div class="contacts__map"></div>
+    </section>
+  </main>
+  <footer class="main-footer">
+    <div class="main-footer__container container">
+      <a class="main-footer__logo" href="index.html">
+        <img class="logo-text" src="#" alt="Cat Energy" width="101" height="18">
+      </a>
+      <ul class="main-footer__social social-list">
+        <li class="social-list__item">
+          <a class="social-list__link" href="#">Vkontakte</a>
+        </li>
+        <li class="social-list__item">
+          <a class="social-list__link" href="#">Youtube</a>
+        </li>
+        <li class="social-list__item">
+          <a class="social-list__link" href="#">Telegram</a>
+        </li>
+      </ul>
+      <div class="main-footer__developers developers">
+        <a class="developers__name" href="#">HTML Academy</a>
+        <a class="developers__logo" href="#">Логотип HTML Academy</a>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
