--- a/source/index.html
+++ b/source/index.html
@@ -13,8 +13,7 @@
   <header class="main-header">
     <div class="container">
       <a class="main-header__logo" href="index.html">
-        <img class="logo-image" src="#" alt="Логотип Cat Energy" width="33" height="38">
-        <img class="logo-text" src="#" alt="Cat Energy" width="101" height="18">
+        <img class="logo" src="#" alt="Логотип Cat Energy" width="190" height="38">
       </a>
       <nav class="main-navigation">
         <button class="main-navigation__toggle" type="button">
@@ -22,7 +21,7 @@
         </button>
         <ul class="navigation-list">
           <li class="navigation-list__item">
-            <a class="navigation-list__link" href="index.html">Главная</a>
+            <a class="navigation-list__link navigation-list__link--current" href="index.html">Главная</a>
           </li>
           <li class="navigation-list__item">
             <a class="navigation-list__link" href="catalog.html">Каталог продукции</a>
@@ -100,7 +99,10 @@
       <h2 class="visually-hidden">Контакты</h2>
       <div class="contacts__info contact-info">
         <p class="contact-info__promo">Приглашаем к сотрудничеству дилеров!</p>
-        <p class="contact-info__text">ул. Большая Конюшенная, д. 19/8<span>Санкт-Петербург</span></p>
+        <div class="contact-info__text-wrap">
+          <p class="contact-info__text">ул. Большая Конюшенная, д. 19/8</p>
+          <p class="contact-info__text">Санкт-Петербург</p>
+        </div>
       </div>
       <div class="contacts__map"></div>
     </section>
