Правит разметку карточек товаров

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -40,8 +40,12 @@
         <h2 class="visually-hidden">Основные товары</h2>
         <ul class="catalog__list product-list">
           <li class="product-list__item product">
-            <img class="product__image" src="#" alt="Cat Energy PRO с курицей 500 г" width="140" height="107">
-            <h3 class="product__title">Cat Energy PRO 500 г</h3>
+            <a class="product__image-link" href="#">
+              <img class="product__image" src="#" alt="Cat Energy PRO с курицей 500 г" width="140" height="107">
+            </a>
+            <a class="product__title-link" href="#">
+              <h3 class="product__title">Cat Energy PRO 500 г</h3>
+            </a>
             <ul class="product__properties properties-list">
               <li class="properties-list__item">
                 <span class="properties-list__text">Масса</span>
@@ -59,8 +63,12 @@
             <a class="product__button button" href="#">Заказать</a>
           </li>
           <li class="product-list__item product">
-            <img class="product__image" src="#" alt="Cat Energy PRO с курицей 1000 г" width="140" height="107">
-            <h3 class="product__title">Cat Energy PRO 1000 г</h3>
+            <a class="product__image-link" href="#">
+              <img class="product__image" src="#" alt="Cat Energy PRO с курицей 1000 г" width="140" height="107">
+            </a>
+            <a class="product__title-link" href="#">
+              <h3 class="product__title">Cat Energy PRO 1000 г</h3>
+            </a>
             <ul class="product__properties properties-list">
               <li class="properties-list__item">
                 <span class="properties-list__text">Масса</span>
@@ -78,8 +86,12 @@
             <a class="product__button button" href="#">Заказать</a>
           </li>
           <li class="product-list__item product">
-            <img class="product__image" src="#" alt="Cat Energy PRO с рыбой 500 г" width="140" height="107">
-            <h3 class="product__title">Cat Energy PRO 500 г</h3>
+            <a class="product__image-link" href="#">
+              <img class="product__image" src="#" alt="Cat Energy PRO с рыбой 500 г" width="140" height="107">
+            </a>
+            <a class="product__title-link" href="#">
+              <h3 class="product__title">Cat Energy PRO 500 г</h3>
+            </a>
             <ul class="product__properties properties-list">
               <li class="properties-list__item">
                 <span class="properties-list__text">Масса</span>
@@ -97,8 +109,12 @@
             <a class="product__button button" href="#">Заказать</a>
           </li>
           <li class="product-list__item product">
-            <img class="product__image" src="#" alt="Cat Energy PRO с рыбой 1000 г" width="140" height="107">
-            <h3 class="product__title">Cat Energy PRO 1000 г</h3>
+            <a class="product__image-link" href="#">
+              <img class="product__image" src="#" alt="Cat Energy PRO с рыбой 1000 г" width="140" height="107">
+            </a>
+            <a class="product__title-link" href="#">
+              <h3 class="product__title">Cat Energy PRO 1000 г</h3>
+            </a>
             <ul class="product__properties properties-list">
               <li class="properties-list__item">
                 <span class="properties-list__text">Масса</span>
@@ -116,8 +132,12 @@
             <a class="product__button button" href="#">Заказать</a>
           </li>
           <li class="product-list__item product">
-            <img class="product__image" src="#" alt="Cat Energy PRO с гречкой 500 г" width="140" height="107">
-            <h3 class="product__title">Cat Energy PRO 500 г</h3>
+            <a class="product__image-link" href="#">
+              <img class="product__image" src="#" alt="Cat Energy PRO с гречкой 500 г" width="140" height="107">
+            </a>
+            <a class="product__title-link" href="#">
+              <h3 class="product__title">Cat Energy PRO 500 г</h3>
+            </a>
             <ul class="product__properties properties-list">
               <li class="properties-list__item">
                 <span class="properties-list__text">Масса</span>
@@ -135,8 +155,12 @@
             <a class="product__button button" href="#">Заказать</a>
           </li>
           <li class="product-list__item product">
-            <img class="product__image" src="#" alt="Cat Energy PRO с гречкой 1000 г" width="140" height="107">
-            <h3 class="product__title">Cat Energy PRO 1000 г</h3>
+            <a class="product__image-link" href="#">
+              <img class="product__image" src="#" alt="Cat Energy PRO с гречкой 1000 г" width="140" height="107">
+            </a>
+            <a class="product__title-link" href="#">
+              <h3 class="product__title">Cat Energy PRO 1000 г</h3>
+            </a>
             <ul class="product__properties properties-list">
               <li class="properties-list__item">
                 <span class="properties-list__text">Масса</span>
@@ -154,8 +178,12 @@
             <a class="product__button button" href="#">Заказать</a>
           </li>
           <li class="product-list__item product">
-            <img class="product__image" src="#" alt="Cat Energy PRO с рисом 500 г" width="140" height="107">
-            <h3 class="product__title">Cat Energy PRO 500 г</h3>
+            <a class="product__image-link" href="#">
+              <img class="product__image" src="#" alt="Cat Energy PRO с рисом 500 г" width="140" height="107">
+            </a>
+            <a class="product__title-link" href="#">
+              <h3 class="product__title">Cat Energy PRO 500 г</h3>
+            </a>
             <ul class="product__properties properties-list">
               <li class="properties-list__item">
                 <span class="properties-list__text">Масса</span>
@@ -185,7 +213,9 @@
         <h2 class="additional__title subtitle">Дополнительные товары</h2>
         <ul class="additional__list additional-list">
           <li class="additional-list__item additional-product">
-            <h3 class="additional-product__title">Сахарозаменитель</h3>
+            <a class="additional-product__title-link" href="#">
+              <h3 class="additional-product__title">Сахарозаменитель</h3>
+            </a>
             <p class="additional-product__properties-wrap">
               <span class="additional-product__properties">1 упаковка (100 г)</span>
               <span class="additional-product__properties">200 ₽</span>
@@ -193,7 +223,9 @@
             <a class="additional-product__button button" href="#">Заказать</a>
           </li>
           <li class="additional-list__item additional-product">
-            <h3 class="additional-product__title">Питьевая вода</h3>
+            <a class="additional-product__title-link" href="#">
+              <h3 class="additional-product__title">Питьевая вода</h3>
+            </a>
             <p class="additional-product__properties-wrap">
               <span class="additional-product__properties">5 литров</span>
               <span class="additional-product__properties">50 ₽</span>
@@ -201,7 +233,9 @@
             <a class="additional-product__button button" href="#">Заказать</a>
           </li>
           <li class="additional-list__item additional-product">
-            <h3 class="additional-product__title">Молоко</h3>
+            <a class="additional-product__title-link" href="#">
+              <h3 class="additional-product__title">Молоко</h3>
+            </a>
             <p class="additional-product__properties-wrap">
               <span class="additional-product__properties">1 литр</span>
               <span class="additional-product__properties">100 ₽</span>
@@ -209,7 +243,9 @@
             <a class="additional-product__button button" href="#">Заказать</a>
           </li>
           <li class="additional-list__item additional-product">
-            <h3 class="additional-product__title">Витамины</h3>
+            <a class="additional-product__title-link" href="#">
+              <h3 class="additional-product__title">Витамины</h3>
+            </a>
             <p class="additional-product__properties-wrap">
               <span class="additional-product__properties">1 упаковка (30 г)</span>
               <span class="additional-product__properties">300 ₽</span>
