--- a/source/catalog.html
+++ b/source/catalog.html
@@ -23,7 +23,7 @@
         <button class="main-navigation__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <ul class="navigation-list">
+        <ul class="navigation-list list-reset">
           <li class="navigation-list__item">
             <a class="navigation-list__link" href="index.html">Главная</a>
           </li>
@@ -41,8 +41,8 @@
     <section class="catalog">
       <div class="catalog__container container">
         <h1 class="catalog__title title">Каталог продукции</h1>
-        <h2 class="visually-hidden">Основные товары</h2>
-        <ul class="catalog__list product-list">
+        <h2 class="visually-hidden subtitle">Основные товары</h2>
+        <ul class="catalog__list product-list list-reset">
           <li class="product-list__item product">
             <a class="product__image-link" href="#">
               <picture>
@@ -53,7 +53,7 @@
             <a class="product__title-link" href="#">
               <h3 class="product__title">Cat Energy PRO 500 г</h3>
             </a>
-            <ul class="product__properties properties-list">
+            <ul class="product__properties properties-list list-reset">
               <li class="properties-list__item">
                 <span class="properties-list__text">Масса</span>
                 <span class="properties-list__text">500 г</span>
@@ -79,7 +79,7 @@
             <a class="product__title-link" href="#">
               <h3 class="product__title">Cat Energy PRO 1000 г</h3>
             </a>
-            <ul class="product__properties properties-list">
+            <ul class="product__properties properties-list list-reset">
               <li class="properties-list__item">
                 <span class="properties-list__text">Масса</span>
                 <span class="properties-list__text">1000 г</span>
@@ -105,7 +105,7 @@
             <a class="product__title-link" href="#">
               <h3 class="product__title">Cat Energy PRO 500 г</h3>
             </a>
-            <ul class="product__properties properties-list">
+            <ul class="product__properties properties-list list-reset">
               <li class="properties-list__item">
                 <span class="properties-list__text">Масса</span>
                 <span class="properties-list__text">500 г</span>
@@ -131,7 +131,7 @@
             <a class="product__title-link" href="#">
               <h3 class="product__title">Cat Energy PRO 1000 г</h3>
             </a>
-            <ul class="product__properties properties-list">
+            <ul class="product__properties properties-list list-reset">
               <li class="properties-list__item">
                 <span class="properties-list__text">Масса</span>
                 <span class="properties-list__text">1000 г</span>
@@ -157,7 +157,7 @@
             <a class="product__title-link" href="#">
               <h3 class="product__title">Cat Energy PRO 500 г</h3>
             </a>
-            <ul class="product__properties properties-list">
+            <ul class="product__properties properties-list list-reset">
               <li class="properties-list__item">
                 <span class="properties-list__text">Масса</span>
                 <span class="properties-list__text">500 г</span>
@@ -183,7 +183,7 @@
             <a class="product__title-link" href="#">
               <h3 class="product__title">Cat Energy PRO 1000 г</h3>
             </a>
-            <ul class="product__properties properties-list">
+            <ul class="product__properties properties-list list-reset">
               <li class="properties-list__item">
                 <span class="properties-list__text">Масса</span>
                 <span class="properties-list__text">1000 г</span>
@@ -209,7 +209,7 @@
             <a class="product__title-link" href="#">
               <h3 class="product__title">Cat Energy PRO 500 г</h3>
             </a>
-            <ul class="product__properties properties-list">
+            <ul class="product__properties properties-list list-reset">
               <li class="properties-list__item">
                 <span class="properties-list__text">Масса</span>
                 <span class="properties-list__text">500 г</span>
@@ -236,7 +236,7 @@
     <section class="additional">
       <div class="additional__container container">
         <h2 class="additional__title subtitle">Дополнительные товары</h2>
-        <ul class="additional__list additional-list">
+        <ul class="additional__list additional-list list-reset">
           <li class="additional-list__item additional-product">
             <a class="additional-product__title-link" href="#">
               <h3 class="additional-product__title">Сахарозаменитель</h3>
@@ -294,8 +294,8 @@
         <button class="subscribe__button button" type="submit">Подписаться</button>
       </form>
     </section>
-    <section class="contacts">
-      <h2 class="visually-hidden">Контакты</h2>
+    <section class="contacts contacts--colored">
+      <h2 class="visually-hidden subtitle">Контакты</h2>
       <div class="contacts__info contact-info">
         <p class="contact-info__promo">Приглашаем к сотрудничеству дилеров!</p>
         <div class="contact-info__text-wrap">
@@ -311,15 +311,21 @@
       <a class="main-footer__logo" href="index.html">
         <img class="logo-text" src="#" alt="Cat Energy" width="101" height="18">
       </a>
-      <ul class="main-footer__social social-list">
+      <ul class="main-footer__social social-list list-reset">
         <li class="social-list__item">
-          <a class="social-list__link" href="#">Vkontakte</a>
+          <a class="social-list__link" href="#">
+            <span class="visually-hidden">Vkontakte</span>
+          </a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link" href="#">Youtube</a>
+          <a class="social-list__link" href="#">
+            <span class="visually-hidden">Youtube</span>
+          </a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link" href="#">Telegram</a>
+          <a class="social-list__link" href="#">
+            <span class="visually-hidden">Telegram</span>
+          </a>
         </li>
       </ul>
       <div class="main-footer__developers developers">
