--- a/source/catalog.html
+++ b/source/catalog.html
@@ -17,7 +17,11 @@
   <header class="main-header">
     <div class="container">
       <a class="main-header__logo" href="index.html">
-        <img class="logo" src="#" alt="Логотип Cat Energy" width="190" height="38">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="images/logo/logo-desktop.svg" type="image/svg+xml" width="202" height="59">
+          <source media="(min-width: 768px)" srcset="images/logo/logo-tablet.svg" type="image/svg+xml" width="174" height="50">
+          <img class="logo" src="images/logo/logo-mobile.svg" alt="Логотип Cat Energy" width="190" height="38">
+        </picture>
       </a>
       <nav class="main-navigation">
         <button class="main-navigation__toggle" type="button">
@@ -225,7 +229,7 @@
             </ul>
             <a class="product__button button" href="#">Заказать</a>
           </li>
-          <li class="product-list__item product">
+          <li class="product-list__item product product--show-more">
             <p class="product__title">Показать еще 100500 товаров</p>
             <p class="product__text-additional">На самом деле вкусов гораздо больше!</p>
             <a class="product__button button button--additional" href="#">Показать все</a>
@@ -309,29 +313,31 @@
   <footer class="main-footer">
     <div class="main-footer__container container">
       <a class="main-footer__logo" href="index.html">
-        <img class="logo-text" src="#" alt="Cat Energy" width="101" height="18">
+        <img class="logo-text" src="images/logo/logo-text.svg" alt="Cat Energy" width="101" height="18">
       </a>
       <ul class="main-footer__social social-list list-reset">
         <li class="social-list__item">
-          <a class="social-list__link" href="#">
+          <a class="social-list__link social-list__link--vkontakte" href="#">
             <span class="visually-hidden">Vkontakte</span>
           </a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link" href="#">
+          <a class="social-list__link social-list__link--youtube" href="#">
             <span class="visually-hidden">Youtube</span>
           </a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link" href="#">
+          <a class="social-list__link social-list__link--telegram" href="#">
             <span class="visually-hidden">Telegram</span>
           </a>
         </li>
       </ul>
-      <div class="main-footer__developers developers">
-        <a class="developers__name" href="#">HTML Academy</a>
-        <a class="developers__logo" href="#">Логотип HTML Academy</a>
-      </div>
+      <a class="main-footer__developers developers" href="#">
+        <p class="developers__name">HTML Academy</p>
+        <p class="developers__logo">
+          <span class="visually-hidden">Логотип HTML Academy</span>
+        </p>
+      </a>
     </div>
   </footer>
 </body>
