--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,11 @@
   <header class="main-header">
     <div class="container">
       <a class="main-header__logo" href="index.html">
-        <img class="logo" src="#" alt="Логотип Cat Energy" width="190" height="38">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="images/logo/logo-desktop.svg" type="image/svg+xml" width="202" height="59">
+          <source media="(min-width: 768px)" srcset="images/logo/logo-tablet.svg" type="image/svg+xml" width="174" height="50">
+          <img class="logo" src="images/logo/logo-mobile.svg" alt="Логотип Cat Energy" width="190" height="38">
+        </picture>
       </a>
       <nav class="main-navigation">
         <button class="main-navigation__toggle" type="button">
@@ -53,12 +57,12 @@
     <section class="programs">
       <div class="programs__container container">
         <h2 class="visually-hidden title">Программы питания</h2>
-        <article class="programs__item program-card">
+        <article class="programs__item program-card program-card--icon-slim">
           <h3 class="program-card__title">Похудение</h3>
           <p class="program-card__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
           <a class="program-card__link" href="#">Каталог slim</a>
         </article>
-        <article class="programs__item program-card">
+        <article class="programs__item program-card program-card--icon-fit">
           <h3 class="program-card__title">Набор массы</h3>
           <p class="program-card__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
           <a class="program-card__link" href="#">Каталог pro</a>
@@ -105,7 +109,9 @@
             <source media="(min-width: 768px)" srcset="images/index/slider/slider-after-desktop@1x.png 1x, images/index/slider/slider-after-desktop@2x.png 2x" type="image/png" width="560" height="512">
             <img class="slider__image-after" src="images/index/slider/slider-after-mobile@1x.png" srcset="images/index/slider/slider-after-mobile@2x.png 2x" alt="Кот в здоровом весе" width="280" height="256">
           </picture>
-          <button class="slider__button" type="button"><span class="visually-hidden">Переместить</span></button>
+          <button class="slider__button" type="button">
+            <span class="visually-hidden">Переместить</span>
+          </button>
         </div>
       </div>
     </section>
@@ -124,29 +130,31 @@
   <footer class="main-footer">
     <div class="main-footer__container container">
       <a class="main-footer__logo" href="index.html">
-        <img class="logo-text" src="#" alt="Cat Energy" width="101" height="18">
+        <img class="logo-text" src="images/logo/logo-text.svg" alt="Cat Energy" width="101" height="18">
       </a>
       <ul class="main-footer__social social-list list-reset">
         <li class="social-list__item">
-          <a class="social-list__link" href="#">
+          <a class="social-list__link social-list__link--vkontakte" href="#">
             <span class="visually-hidden">Vkontakte</span>
           </a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link" href="#">
+          <a class="social-list__link social-list__link--youtube" href="#">
             <span class="visually-hidden">Youtube</span>
           </a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link" href="#">
+          <a class="social-list__link social-list__link--telegram" href="#">
             <span class="visually-hidden">Telegram</span>
           </a>
         </li>
       </ul>
-      <div class="main-footer__developers developers">
-        <a class="developers__name" href="#">HTML Academy</a>
-        <a class="developers__logo" href="#">Логотип HTML Academy</a>
-      </div>
+      <a class="main-footer__developers developers" href="#">
+        <p class="developers__name">HTML Academy</p>
+        <p class="developers__logo">
+          <span class="visually-hidden">Логотип HTML Academy</span>
+        </p>
+      </a>
     </div>
   </footer>
 </body>
