--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,7 +15,7 @@
 
 <body class="page__body">
   <header class="main-header">
-    <div class="container">
+    <div class="main-header__container container">
       <a class="main-header__logo" href="index.html">
         <picture>
           <source media="(min-width: 1440px)" srcset="images/logo/logo-desktop.svg" type="image/svg+xml" width="202" height="59">
@@ -27,7 +27,7 @@
         <button class="main-navigation__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <ul class="navigation-list list-reset">
+        <ul class="navigation-list navigation-list--inner list-reset">
           <li class="navigation-list__item">
             <a class="navigation-list__link" href="index.html">Главная</a>
           </li>
@@ -240,71 +240,77 @@
     <section class="additional">
       <div class="additional__container container">
         <h2 class="additional__title subtitle">Дополнительные товары</h2>
-        <ul class="additional__list additional-list list-reset">
-          <li class="additional-list__item additional-product">
-            <a class="additional-product__title-link" href="#">
-              <h3 class="additional-product__title">Сахарозаменитель</h3>
-            </a>
-            <p class="additional-product__properties-wrap">
-              <span class="additional-product__properties">1 упаковка (100 г)</span>
-              <span class="additional-product__properties">200 ₽</span>
-            </p>
-            <a class="additional-product__button button" href="#">Заказать</a>
-          </li>
-          <li class="additional-list__item additional-product">
-            <a class="additional-product__title-link" href="#">
-              <h3 class="additional-product__title">Питьевая вода</h3>
-            </a>
-            <p class="additional-product__properties-wrap">
-              <span class="additional-product__properties">5 литров</span>
-              <span class="additional-product__properties">50 ₽</span>
-            </p>
-            <a class="additional-product__button button" href="#">Заказать</a>
-          </li>
-          <li class="additional-list__item additional-product">
-            <a class="additional-product__title-link" href="#">
-              <h3 class="additional-product__title">Молоко</h3>
-            </a>
-            <p class="additional-product__properties-wrap">
-              <span class="additional-product__properties">1 литр</span>
-              <span class="additional-product__properties">100 ₽</span>
-            </p>
-            <a class="additional-product__button button" href="#">Заказать</a>
-          </li>
-          <li class="additional-list__item additional-product">
-            <a class="additional-product__title-link" href="#">
-              <h3 class="additional-product__title">Витамины</h3>
-            </a>
-            <p class="additional-product__properties-wrap">
-              <span class="additional-product__properties">1 упаковка (30 г)</span>
-              <span class="additional-product__properties">300 ₽</span>
-            </p>
-            <a class="additional-product__button button" href="#">Заказать</a>
-          </li>
-        </ul>
-        <div class="additional__specials specials">
-          <p class="specials__text">Закажите все и получите чехол для кота в подарок!</p>
+        <div class="additional__wrap">
+          <ul class="additional__list additional-list list-reset">
+            <li class="additional-list__item additional-product">
+              <a class="additional-product__title-link" href="#">
+                <h3 class="additional-product__title">Сахарозаменитель</h3>
+              </a>
+              <p class="additional-product__properties-wrap">
+                <span class="additional-product__properties">1 упаковка (100 г)</span>
+                <span class="additional-product__properties">200 ₽</span>
+              </p>
+              <a class="additional-product__button button" href="#">Заказать</a>
+            </li>
+            <li class="additional-list__item additional-product">
+              <a class="additional-product__title-link" href="#">
+                <h3 class="additional-product__title">Питьевая вода</h3>
+              </a>
+              <p class="additional-product__properties-wrap">
+                <span class="additional-product__properties">5 литров</span>
+                <span class="additional-product__properties">50 ₽</span>
+              </p>
+              <a class="additional-product__button button" href="#">Заказать</a>
+            </li>
+            <li class="additional-list__item additional-product">
+              <a class="additional-product__title-link" href="#">
+                <h3 class="additional-product__title">Молоко</h3>
+              </a>
+              <p class="additional-product__properties-wrap">
+                <span class="additional-product__properties">1 литр</span>
+                <span class="additional-product__properties">100 ₽</span>
+              </p>
+              <a class="additional-product__button button" href="#">Заказать</a>
+            </li>
+            <li class="additional-list__item additional-product">
+              <a class="additional-product__title-link" href="#">
+                <h3 class="additional-product__title">Витамины</h3>
+              </a>
+              <p class="additional-product__properties-wrap">
+                <span class="additional-product__properties">1 упаковка (30 г)</span>
+                <span class="additional-product__properties">300 ₽</span>
+              </p>
+              <a class="additional-product__button button" href="#">Заказать</a>
+            </li>
+          </ul>
+          <div class="additional__specials specials">
+            <p class="specials__text">Закажите все и получите чехол для кота в подарок!</p>
+          </div>
         </div>
       </div>
     </section>
     <section class="subscribe">
-      <h2 class="subscribe__title subtitle">Акции и новинки</h2>
-      <p class="subscribe__text">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
-      <form class="subscribe__form" action="https://echo.htmlacademy.ru" method="post">
-        <label class="subscribe__label">
-          <span class="visually-hidden">Ваш email</span>
-          <input class="subscribe__input" type="email" name="email" placeholder="kuklachev@gmail.com" required>
-        </label>
-        <button class="subscribe__button button" type="submit">Подписаться</button>
-      </form>
+      <div class="subscribe__container container">
+        <h2 class="subscribe__title subtitle">Акции и новинки</h2>
+        <p class="subscribe__text">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
+        <form class="subscribe__form" action="https://echo.htmlacademy.ru" method="post">
+          <label class="subscribe__label">
+            <span class="visually-hidden">Ваш email</span>
+            <input class="subscribe__input" type="email" name="email" placeholder="kuklachev@gmail.com" required>
+          </label>
+          <button class="subscribe__button button" type="submit">Подписаться</button>
+        </form>
+      </div>
     </section>
     <section class="contacts contacts--colored">
-      <h2 class="visually-hidden subtitle">Контакты</h2>
-      <div class="contacts__info contact-info">
-        <p class="contact-info__promo">Приглашаем к сотрудничеству дилеров!</p>
-        <div class="contact-info__text-wrap">
-          <p class="contact-info__text">ул. Большая Конюшенная, д. 19/8</p>
-          <p class="contact-info__text">Санкт-Петербург</p>
+      <div class="contacts__container container">
+        <h2 class="visually-hidden subtitle">Контакты</h2>
+        <div class="contacts__info contact-info">
+          <p class="contact-info__promo">Приглашаем к сотрудничеству дилеров!</p>
+          <div class="contact-info__text-wrap">
+            <p class="contact-info__text">ул. Большая Конюшенная, д. 19/8</p>
+            <p class="contact-info__text">Санкт-Петербург</p>
+          </div>
         </div>
       </div>
       <div class="contacts__map"></div>
