--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
 
 <body class="page__body">
   <header class="main-header">
-    <div class="container">
+    <div class="main-header__container container">
       <a class="main-header__logo" href="index.html">
         <picture>
           <source media="(min-width: 1440px)" srcset="images/logo/logo-desktop.svg" type="image/svg+xml" width="202" height="59">
@@ -82,22 +82,24 @@
     </section>
     <section class="reviews">
       <div class="reviews__container container">
-        <h2 class="reviews__title title">Живой пример</h2>
-        <p class="reviews__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-        <div class="reviews__statistics statistics">
-          <dl class="statistics__list">
-            <div class="statistics__item">
-              <dt class="statistics__item-value">5 кг</dt>
-              <dd class="statistics__item-description">Cнижение веса</dd>
+        <div class="reviews__wrap">
+          <h2 class="reviews__title title">Живой пример</h2>
+          <p class="reviews__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+          <div class="reviews__statistics statistics">
+            <dl class="statistics__list">
+              <div class="statistics__item">
+                <dt class="statistics__item-value">5 кг</dt>
+                <dd class="statistics__item-description">Cнижение веса</dd>
+              </div>
+              <div class="statistics__item">
+                <dt class="statistics__item-value">60 дней</dt>
+                <dd class="statistics__item-description">Затрачено времени</dd>
+              </div>
+            </dl>
+            <div class="statistics__cost">
+              <p class="statistics__cost-text">Затраты на питание:</p>
+              <p class="statistics__cost-text">15 000 руб.</p>
             </div>
-            <div class="statistics__item">
-              <dt class="statistics__item-value">60 дней</dt>
-              <dd class="statistics__item-description">Затрачено времени</dd>
-            </div>
-          </dl>
-          <div class="statistics__cost">
-            <p class="statistics__cost-text">Затраты на питание:</p>
-            <p class="statistics__cost-text">15 000 руб.</p>
           </div>
         </div>
         <div class="reviews__slider slider">
@@ -116,12 +118,14 @@
       </div>
     </section>
     <section class="contacts">
-      <h2 class="visually-hidden subtitle">Контакты</h2>
-      <div class="contacts__info contact-info">
-        <p class="contact-info__promo">Приглашаем к сотрудничеству дилеров!</p>
-        <div class="contact-info__text-wrap">
-          <p class="contact-info__text">ул. Большая Конюшенная, д. 19/8</p>
-          <p class="contact-info__text">Санкт-Петербург</p>
+      <div class="contacts__container container">
+        <h2 class="visually-hidden subtitle">Контакты</h2>
+        <div class="contacts__info contact-info">
+          <p class="contact-info__promo">Приглашаем к сотрудничеству дилеров!</p>
+          <div class="contact-info__text-wrap">
+            <p class="contact-info__text">ул. Большая Конюшенная, д. 19/8</p>
+            <p class="contact-info__text">Санкт-Петербург</p>
+          </div>
         </div>
       </div>
       <div class="contacts__map"></div>
@@ -130,7 +134,7 @@
   <footer class="main-footer">
     <div class="main-footer__container container">
       <a class="main-footer__logo" href="index.html">
-        <img class="logo-text" src="images/logo/logo-text.svg" alt="Cat Energy" width="101" height="18">
+        <img class="logo-text" src="images/logo/logo-text.svg" alt="Cat Energy" width="128" height="24">
       </a>
       <ul class="main-footer__social social-list list-reset">
         <li class="social-list__item">
