Завершает большую часть стилизации

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header">
+  <header class="main-header main-header--inner">
     <div class="main-header__container container">
       <a class="main-header__logo" href="index.html">
         <picture>
@@ -41,7 +41,7 @@
       </nav>
     </div>
   </header>
-  <main class="main-container">
+  <main>
     <section class="catalog">
       <div class="catalog__container container">
         <h1 class="catalog__title title">Каталог продукции</h1>
@@ -159,7 +159,7 @@
               </picture>
             </a>
             <a class="product__title-link" href="#">
-              <h3 class="product__title">Cat Energy PRO 500 г</h3>
+              <h3 class="product__title">Cat Energy SLIM 500 г</h3>
             </a>
             <ul class="product__properties properties-list list-reset">
               <li class="properties-list__item">
@@ -185,7 +185,7 @@
               </picture>
             </a>
             <a class="product__title-link" href="#">
-              <h3 class="product__title">Cat Energy PRO 1000 г</h3>
+              <h3 class="product__title">Cat Energy SLIM 1000 г</h3>
             </a>
             <ul class="product__properties properties-list list-reset">
               <li class="properties-list__item">
@@ -211,7 +211,7 @@
               </picture>
             </a>
             <a class="product__title-link" href="#">
-              <h3 class="product__title">Cat Energy PRO 500 г</h3>
+              <h3 class="product__title">Cat Energy SLIM 500 г</h3>
             </a>
             <ul class="product__properties properties-list list-reset">
               <li class="properties-list__item">
@@ -241,8 +241,8 @@
       <div class="additional__container container">
         <h2 class="additional__title subtitle">Дополнительные товары</h2>
         <div class="additional__wrap">
-          <ul class="additional__list additional-list list-reset">
-            <li class="additional-list__item additional-product">
+          <ul class="additional__list list-reset">
+            <li class="additional-product">
               <a class="additional-product__title-link" href="#">
                 <h3 class="additional-product__title">Сахарозаменитель</h3>
               </a>
@@ -252,7 +252,7 @@
               </p>
               <a class="additional-product__button button" href="#">Заказать</a>
             </li>
-            <li class="additional-list__item additional-product">
+            <li class="additional-product">
               <a class="additional-product__title-link" href="#">
                 <h3 class="additional-product__title">Питьевая вода</h3>
               </a>
@@ -262,7 +262,7 @@
               </p>
               <a class="additional-product__button button" href="#">Заказать</a>
             </li>
-            <li class="additional-list__item additional-product">
+            <li class="additional-product">
               <a class="additional-product__title-link" href="#">
                 <h3 class="additional-product__title">Молоко</h3>
               </a>
@@ -272,7 +272,7 @@
               </p>
               <a class="additional-product__button button" href="#">Заказать</a>
             </li>
-            <li class="additional-list__item additional-product">
+            <li class="additional-product">
               <a class="additional-product__title-link" href="#">
                 <h3 class="additional-product__title">Витамины</h3>
               </a>
@@ -284,7 +284,7 @@
             </li>
           </ul>
           <div class="additional__specials specials">
-            <p class="specials__text">Закажите все и получите чехол для кота в подарок!</p>
+            <p class="specials__text">Закажите все и&nbsp;получите чехол для кота в подарок!</p>
           </div>
         </div>
       </div>
@@ -319,7 +319,7 @@
   <footer class="main-footer">
     <div class="main-footer__container container">
       <a class="main-footer__logo" href="index.html">
-        <img class="logo-text" src="images/logo/logo-text.svg" alt="Cat Energy" width="101" height="18">
+        <img src="images/logo/logo-text.svg" alt="Cat Energy" width="101" height="18">
       </a>
       <ul class="main-footer__social social-list list-reset">
         <li class="social-list__item">
