--- a/source/index.html
+++ b/source/index.html
@@ -41,7 +41,7 @@
       </nav>
     </div>
   </header>
-  <main class="main-container">
+  <main>
     <section class="hero">
       <div class="hero__container container">
         <h1 class="hero__title title">Функциональное питание для котов</h1>
@@ -76,7 +76,7 @@
           <li class="benefits__item benefits__item--icon-leaf">Функциональное питание содержит только полезные питательные вещества.</li>
           <li class="benefits__item benefits__item--icon-substance">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
           <li class="benefits__item benefits__item--icon-cutlery">Замените один-два приема обычной еды на наше функциональное питание.</li>
-          <li class="benefits__item benefits__item--icon-scales">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+          <li class="benefits__item benefits__item--icon-scales">Уже через месяц наслаждайтесь изменениями к лучшему вашего&nbsp;питомца!</li>
         </ul>
       </div>
     </section>
@@ -84,7 +84,7 @@
       <div class="reviews__container container">
         <div class="reviews__wrap">
           <h2 class="reviews__title title">Живой пример</h2>
-          <p class="reviews__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+          <p class="reviews__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без&nbsp;изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
           <div class="reviews__statistics statistics">
             <dl class="statistics__list">
               <div class="statistics__item">
@@ -121,7 +121,7 @@
       <div class="contacts__container container">
         <h2 class="visually-hidden subtitle">Контакты</h2>
         <div class="contacts__info contact-info">
-          <p class="contact-info__promo">Приглашаем к сотрудничеству дилеров!</p>
+          <p class="contact-info__promo">Приглашаем к&nbsp;сотрудничеству дилеров!</p>
           <div class="contact-info__text-wrap">
             <p class="contact-info__text">ул. Большая Конюшенная, д. 19/8</p>
             <p class="contact-info__text">Санкт-Петербург</p>
@@ -134,7 +134,7 @@
   <footer class="main-footer">
     <div class="main-footer__container container">
       <a class="main-footer__logo" href="index.html">
-        <img class="logo-text" src="images/logo/logo-text.svg" alt="Cat Energy" width="128" height="24">
+        <img src="images/logo/logo-text.svg" alt="Cat Energy" width="128" height="24">
       </a>
       <ul class="main-footer__social social-list list-reset">
         <li class="social-list__item">
