--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,7 +13,7 @@
   <script src="scripts/index.js" defer></script>
 </head>
 
-<body class="page__body">
+<body class="page__body nojs">
   <header class="main-header main-header--inner">
     <div class="main-header__container container">
       <a class="main-header__logo" href="index.html">
@@ -239,7 +239,7 @@
     </section>
     <section class="additional">
       <div class="additional__container container">
-        <h2 class="additional__title subtitle">Дополнительные товары</h2>
+        <h2 class="additional__title subtitle subtitle--inner subtitle--with-paddings">Дополнительные товары</h2>
         <div class="additional__wrap">
           <ul class="additional__list list-reset">
             <li class="additional-product">
@@ -291,7 +291,7 @@
     </section>
     <section class="subscribe">
       <div class="subscribe__container container">
-        <h2 class="subscribe__title subtitle">Акции и новинки</h2>
+        <h2 class="subscribe__title subtitle subtitle--inner">Акции и новинки</h2>
         <p class="subscribe__text">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
         <form class="subscribe__form" action="https://echo.htmlacademy.ru" method="post">
           <label class="subscribe__label">
